added basic code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+# Enable file uploads
+spring.servlet.multipart.enabled=true
+# Set the maximum allowed size for a single file
+spring.servlet.multipart.max-file-size=10MB
+# Set the maximum allowed size for all files in a request
+spring.servlet.multipart.max-request-size=10MB
+
 # H2 Database
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dcbapp
